--- a/static/style.css
+++ b/static/style.css
@@ -7,9 +7,9 @@
 
 /* スタートボタンのフォーム */
 .large-form {
-  font-size: 20px;
-  width: 60px;
-  height: 40px;
+  font-size: 40px;
+  width: 120px;
+  height: 80px;
 }
 
 /* スタートの文字のフォーム */
@@ -22,14 +22,15 @@
 
 /* 入力フォーム */
 .large-input {
-  font-size: 18px;
+  font-size: 30px;
   width: 300px;
-  height: 40px;
+  height: 60px;
+  text-align: center;
 }
 
 /* 結果表示のフォーム */
 .result-container {
-  font-size: 100px;
+  font-size: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,9 +38,16 @@
 
 /* カウントダウン表示のフォーム */
 .countdown-container {
-  font-size: 50px;
+  font-size: 60px;
   color: red;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* 計算文表示のフォーム */
+.sentence-container {
+  font-size: 30px;
+  text-align: center;
+  margin: 20px;
 }
